--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "Eye Break Reminder",
   "version": "1.0",
-  "description": "Reminds you to look away from the screen for 20 seconds after every 20 minutes of screen time.",
-  "permissions": ["alarms", "notifications"],
+  "description": "Reminds you to look away from your screen for 20 seconds after every 20 minutes of screen time.",
+  "permissions": ["alarms", "notifications", "storage"],
   "background": {
     "service_worker": "background.js"
   },
